# ChangeLog for dev-ruby/nokogiri-happymapper
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jun 2015; Hans de Graaff <graaff@gentoo.org>
  -nokogiri-happymapper-0.5.7.ebuild, -nokogiri-happymapper-0.5.8.ebuild:
  Cleanup.

*nokogiri-happymapper-0.5.9 (28 Feb 2014)

  28 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  +nokogiri-happymapper-0.5.9.ebuild:
  Version bump.

*nokogiri-happymapper-0.5.8 (24 Oct 2013)

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
  +nokogiri-happymapper-0.5.8.ebuild:
  Version bump.

*nokogiri-happymapper-0.5.7 (04 Jul 2013)

  04 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +nokogiri-happymapper-0.5.7.ebuild, +metadata.xml:
  Initial import. New dependency for pivotal-tracker.
