@@ -1,9 +1,9 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
-USE_RUBY="ruby19 ruby20"
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
 
 RUBY_FAKEGEM_EXTRADOC="CHANGELOG.md README.md"
 
@@ -19,3 +19,5 @@ LICENSE="MIT"
 KEYWORDS="~amd64"
 SLOT="0"
 IUSE="doc"
+
+ruby_add_rdepend ">=dev-ruby/nokogiri-1.5"
